--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,19 @@
 {
-  "name": "kp/bcb-sdk-php",
-  "description": "Unofficial PHP SDK for BCB Group Client API (payments, beneficiaries, virtual IBAN).",
+  "name": "webumer/bcb-php-sdk",
+  "description": "Unofficial PHP SDK for BCB Group Client API (payments, beneficiaries, virtual IBANs, webhooks).",
   "type": "library",
   "license": "MIT",
-  "autoload": { "psr-4": { "Kp\\Bcb\\": "src/" } },
+  "keywords": ["bcb", "bcb-group", "api", "sdk", "php", "payments", "virtual-iban", "webhooks"],
+  "homepage": "https://github.com/webumer/bcb-php-sdk",
+  "authors": [
+    {
+      "name": "Umer Ch",
+      "email": "your-email@example.com"
+    }
+  ],
+  "autoload": { 
+    "psr-4": { "Webumer\\Bcb\\": "src/" } 
+  },
   "require": {
     "php": "^8.1",
     "guzzlehttp/guzzle": "^7.8",
@@ -12,5 +22,7 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^11"
-  }
+  },
+  "minimum-stability": "stable",
+  "prefer-stable": true
 }
