--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,8 +23,8 @@ jobs:
         run: composer install --no-interaction --no-progress --prefer-dist
       - name: Run tests
         run: |
-          if [ -f vendor/bin/phpunit ]; then
+          if [ -f vendor/bin/phpunit ] && find tests -type f -name "*Test.php" -print -quit | grep -q .; then
             vendor/bin/phpunit --no-coverage
           else
-            echo "No tests yet"; exit 0
+            echo "No tests to run"; exit 0
           fi
