--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,16 @@
   "description": "Unofficial PHP SDK for BCB Group Client API (payments, beneficiaries, virtual IBANs, webhooks).",
   "type": "library",
   "license": "MIT",
-  "keywords": ["bcb", "bcb-group", "api", "sdk", "php", "payments", "virtual-iban", "webhooks"],
+  "keywords": [
+    "bcb",
+    "bcb-group",
+    "api",
+    "sdk",
+    "php",
+    "payments",
+    "virtual-iban",
+    "webhooks"
+  ],
   "homepage": "https://github.com/webumer/bcb-php-sdk",
   "authors": [
     {
@@ -11,8 +20,10 @@
       "email": "your-email@example.com"
     }
   ],
-  "autoload": { 
-    "psr-4": { "Webumer\\Bcb\\": "src/" } 
+  "autoload": {
+    "psr-4": {
+      "Webumer\\Bcb\\": "src/"
+    }
   },
   "require": {
     "php": "^8.1",
@@ -21,7 +32,7 @@
     "psr/log": "^3.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^11"
+    "phpunit/phpunit": "^10.5"
   },
   "minimum-stability": "stable",
   "prefer-stable": true
