--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,10 @@
     "webhooks"
   ],
   "homepage": "https://github.com/webumer/bcb-php-sdk",
+  "support": {
+    "issues": "https://github.com/webumer/bcb-php-sdk/issues",
+    "source": "https://github.com/webumer/bcb-php-sdk"
+  },
   "authors": [
     {
       "name": "Umer Ch",
