--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,7 @@
   },
   "authors": [
     {
-      "name": "Umer Ch",
-      "email": "your-email@example.com"
+      "name": "Umer Sulman"
     }
   ],
   "autoload": {
