--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "name": "webumer/bcb-php-sdk",
   "description": "Unofficial PHP SDK for BCB Group Client API (payments, beneficiaries, virtual IBANs, webhooks).",
+  "version": "1.2.0",
   "type": "library",
   "license": "MIT",
   "keywords": [
